// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getTargets A 1`] = `
[
  {
    "minutes": 2,
    "seconds": 25,
  },
  {
    "minutes": 2,
    "seconds": 26,
  },
  {
    "minutes": 2,
    "seconds": 27,
  },
  {
    "minutes": 2,
    "seconds": 28,
  },
  {
    "minutes": 2,
    "seconds": 29,
  },
  {
    "minutes": 2,
    "seconds": 30,
  },
  {
    "minutes": 2,
    "seconds": 31,
  },
  {
    "minutes": 2,
    "seconds": 32,
  },
  {
    "minutes": 2,
    "seconds": 33,
  },
  {
    "minutes": 2,
    "seconds": 34,
  },
  {
    "minutes": 2,
    "seconds": 35,
  },
]
`;

exports[`parseUserInput N default to modulo 5 if marker exists 1`] = `
[
  {
    "minutes": 12,
    "seconds": 29,
  },
  {
    "minutes": 12,
    "seconds": 30,
  },
  {
    "minutes": 12,
    "seconds": 31,
  },
  {
    "minutes": 12,
    "seconds": 32,
  },
  {
    "minutes": 12,
    "seconds": 33,
  },
  {
    "minutes": 12,
    "seconds": 34,
  },
  {
    "minutes": 12,
    "seconds": 35,
  },
  {
    "minutes": 12,
    "seconds": 36,
  },
  {
    "minutes": 12,
    "seconds": 37,
  },
  {
    "minutes": 12,
    "seconds": 38,
  },
  {
    "minutes": 12,
    "seconds": 39,
  },
]
`;
